--- a/app/src/main/res/layout/item_art_description.xml
+++ b/app/src/main/res/layout/item_art_description.xml
@@ -60,7 +60,7 @@
             android:layout_height="20dp"
             android:layout_marginTop="5dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/warning"
+            android:src="@drawable/warning_white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dimensions_icon"
