--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_grey">#F9F9F9</color>
     <color name="medium_grey">#dcdcdc</color>
     <color name="dark_grey">#777777</color>
+    <color name="ic_launcher_background">#B52888</color>
 </resources>
