--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.stablediffuser.ui.art.ArtViewModel" />
+            type="com.benoithebrard.stablediffuser.ui.art.ArtViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
