--- a/app/src/main/res/layout/fragment_mosaic.xml
+++ b/app/src/main/res/layout/fragment_mosaic.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="com.example.stablediffuser.ui.mosaic.MosaicViewModel" />
+            type="com.benoithebrard.stablediffuser.ui.mosaic.MosaicViewModel" />
     </data>
 
     <FrameLayout xmlns:tools="http://schemas.android.com/tools"
