--- a/app/src/main/res/layout/fragment_mosaic.xml
+++ b/app/src/main/res/layout/fragment_mosaic.xml
@@ -35,7 +35,7 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:src="@drawable/warning" />
+                android:src="@drawable/image" />
 
             <TextView
                 android:layout_width="wrap_content"
