fix auto orientation

--- a/app/src/main/res/layout/fragment_mosaic.xml
+++ b/app/src/main/res/layout/fragment_mosaic.xml
@@ -89,15 +89,14 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/mosaic_content"
+            android:id="@+id/result_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
             android:visibility="gone"
             app:itemBinding="@{viewModel.itemBinding}"
-            app:items="@{viewModel.items}"
-            app:spanCount="@{3}" />
+            app:items="@{viewModel.items}" />
 
     </FrameLayout>
 </layout>
