--- a/app/src/main/res/layout/item_mosaic_cell.xml
+++ b/app/src/main/res/layout/item_mosaic_cell.xml
@@ -26,7 +26,7 @@
             android:foreground="?android:attr/selectableItemBackground"
             android:onClickListener="@{viewModel.onShowArt}"
             android:scaleType="fitCenter"
-            android:src="@{viewModel.artData.url}"
+            android:src="@{viewModel.artData.thumbUrl}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
