change art frag icons

--- a/app/src/main/res/layout/fragment_art.xml
+++ b/app/src/main/res/layout/fragment_art.xml
@@ -41,14 +41,14 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
-            android:id="@+id/info_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/favorite_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginEnd="10dp"
             android:elevation="6dp"
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
             android:onClickListener="@{viewModel.onToggleFavorite}"
-            android:padding="10dp"
+            android:padding="5dp"
             android:src="@drawable/favorite_selector"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintEnd_toStartOf="@id/mosaic_button"
@@ -56,15 +56,15 @@
             app:selected="@{viewModel.showAsFavorite}" />
 
         <ImageView
-            android:id="@+id/share_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:id="@+id/browser_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_marginStart="10dp"
             android:elevation="6dp"
             android:foreground="?android:attr/selectableItemBackgroundBorderless"
-            android:onClickListener="@{viewModel.onShareUrl}"
-            android:padding="10dp"
-            android:src="@drawable/sharing"
+            android:onClickListener="@{viewModel.onOpenWebBrowser}"
+            android:padding="5dp"
+            android:src="@drawable/world"
             app:layout_constraintBottom_toBottomOf="@id/mosaic_button"
             app:layout_constraintStart_toEndOf="@id/mosaic_button"
             app:layout_constraintTop_toTopOf="@id/mosaic_button" />
@@ -79,7 +79,7 @@
             android:clipChildren="false"
             android:clipToPadding="false"
             android:elevation="6dp"
-            app:layout_constraintBottom_toTopOf="@id/info_button"
+            app:layout_constraintBottom_toTopOf="@id/favorite_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:viewModel="@{viewModel}"
